Fix text alignment in index.css

--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
     font-size: 115px;
     font-weight: bold;
     color: khaki;
-    text-align: ce
+    text-align: center
 }
 
 
